--- a/gestionmateriel.ui
+++ b/gestionmateriel.ui
@@ -68,7 +68,7 @@ margin-top: 2px; /* make non-selected tabs look smaller */
 }</string>
    </property>
    <property name="currentIndex">
-    <number>1</number>
+    <number>0</number>
    </property>
    <widget class="QWidget" name="tab">
     <attribute name="title">
@@ -91,8 +91,8 @@ margin-top: 2px; /* make non-selected tabs look smaller */
        <rect>
         <x>100</x>
         <y>140</y>
-        <width>56</width>
-        <height>21</height>
+        <width>91</width>
+        <height>31</height>
        </rect>
       </property>
       <property name="styleSheet">
@@ -100,7 +100,7 @@ margin-top: 2px; /* make non-selected tabs look smaller */
 color: #000000;
 background:#FFFF00;
 border: none;
-font-size:12px;
+font-size:20px;
 font-family:Arial, Helvetica, sans-serif;
 border: 2px solid ;
 border-radius: 8px;
@@ -112,16 +112,16 @@ border: none;
 }</string>
       </property>
       <property name="text">
-       <string>Nom</string>
+       <string>  Nom</string>
       </property>
      </widget>
      <widget class="QLineEdit" name="nom">
       <property name="geometry">
        <rect>
-        <x>210</x>
+        <x>220</x>
         <y>140</y>
         <width>161</width>
-        <height>22</height>
+        <height>31</height>
        </rect>
       </property>
       <property name="styleSheet">
@@ -141,8 +141,8 @@ border: none;
        <rect>
         <x>100</x>
         <y>250</y>
-        <width>61</width>
-        <height>21</height>
+        <width>91</width>
+        <height>31</height>
        </rect>
       </property>
       <property name="styleSheet">
@@ -150,7 +150,7 @@ border: none;
 color: #000000;
 background:#FFFF00;
 border: none;
-font-size:12px;
+font-size:20px;
 font-family:Arial, Helvetica, sans-serif;
 border: 2px solid ;
 border-radius: 8px;
@@ -169,9 +169,9 @@ border: none;
       <property name="geometry">
        <rect>
         <x>100</x>
-        <y>200</y>
-        <width>61</width>
-        <height>21</height>
+        <y>190</y>
+        <width>91</width>
+        <height>31</height>
        </rect>
       </property>
       <property name="styleSheet">
@@ -179,7 +179,7 @@ border: none;
 color: #000000;
 background:#FFFF00;
 border: none;
-font-size:12px;
+font-size:20px;
 font-family:Arial, Helvetica, sans-serif;
 border: 2px solid ;
 border-radius: 8px;
@@ -191,16 +191,16 @@ border: none;
 }</string>
       </property>
       <property name="text">
-       <string>Prix</string>
+       <string>  Prix</string>
       </property>
      </widget>
      <widget class="QLineEdit" name="qualite">
       <property name="geometry">
        <rect>
-        <x>210</x>
+        <x>220</x>
         <y>250</y>
         <width>161</width>
-        <height>22</height>
+        <height>31</height>
        </rect>
       </property>
       <property name="styleSheet">
@@ -215,10 +215,10 @@ border: none;
      <widget class="QLineEdit" name="prix">
       <property name="geometry">
        <rect>
-        <x>210</x>
+        <x>220</x>
         <y>190</y>
         <width>161</width>
-        <height>22</height>
+        <height>31</height>
        </rect>
       </property>
       <property name="styleSheet">
@@ -233,10 +233,10 @@ border: none;
      <widget class="QLabel" name="label_4">
       <property name="geometry">
        <rect>
-        <x>100</x>
+        <x>80</x>
         <y>310</y>
-        <width>81</width>
-        <height>21</height>
+        <width>131</width>
+        <height>31</height>
        </rect>
       </property>
       <property name="styleSheet">
@@ -244,7 +244,7 @@ border: none;
 color: #000000;
 background:#FFFF00;
 border: none;
-font-size:12px;
+font-size:20px;
 font-family:Arial, Helvetica, sans-serif;
 border: 2px solid ;
 border-radius: 8px;
@@ -256,16 +256,16 @@ border: none;
 }</string>
       </property>
       <property name="text">
-       <string>Date d'acaht</string>
+       <string>Date d'achat</string>
       </property>
      </widget>
      <widget class="QLineEdit" name="date_achat">
       <property name="geometry">
        <rect>
-        <x>210</x>
+        <x>220</x>
         <y>310</y>
         <width>161</width>
-        <height>22</height>
+        <height>31</height>
        </rect>
       </property>
       <property name="styleSheet">
@@ -280,10 +280,10 @@ border: none;
      <widget class="QLabel" name="label_5">
       <property name="geometry">
        <rect>
-        <x>100</x>
+        <x>95</x>
         <y>80</y>
-        <width>56</width>
-        <height>21</height>
+        <width>91</width>
+        <height>31</height>
        </rect>
       </property>
       <property name="styleSheet">
@@ -291,7 +291,7 @@ border: none;
 color: #000000;
 background:#FFFF00;
 border: none;
-font-size:12px;
+font-size:20px;
 font-family:Arial, Helvetica, sans-serif;
 border: 2px solid ;
 border-radius: 8px;
@@ -303,16 +303,16 @@ border: none;
 }</string>
       </property>
       <property name="text">
-       <string>ID</string>
+       <string>     ID</string>
       </property>
      </widget>
      <widget class="QLineEdit" name="id">
       <property name="geometry">
        <rect>
-        <x>210</x>
+        <x>220</x>
         <y>80</y>
         <width>161</width>
-        <height>22</height>
+        <height>31</height>
        </rect>
       </property>
       <property name="styleSheet">
@@ -329,22 +329,23 @@ border: none;
        <rect>
         <x>440</x>
         <y>90</y>
-        <width>121</width>
-        <height>31</height>
+        <width>131</width>
+        <height>41</height>
        </rect>
       </property>
       <property name="styleSheet">
        <string notr="true">QPushButton
 {
-border-radius: 8px;
-color: rgb(255,255,0);
-background-color: rgba(239, 0, 0);
 border: 2px solid ;
+border-radius: 8px;
+color: rgb(255,255,255);
+background-color: rgba(128,128,128);
+font-size:20px;
 }
 QPushButton:hover
 {
-color: rgb(239, 0, 0);
-background-color: rgb(255,255,0);
+color: rgb(255,255,255);
+background-color: rgb(169,169,169);
 }</string>
       </property>
       <property name="text">
@@ -354,24 +355,25 @@ background-color: rgb(255,255,0);
      <widget class="QPushButton" name="pushButton_2">
       <property name="geometry">
        <rect>
-        <x>450</x>
+        <x>410</x>
         <y>360</y>
-        <width>93</width>
-        <height>28</height>
+        <width>111</width>
+        <height>41</height>
        </rect>
       </property>
       <property name="styleSheet">
        <string notr="true">QPushButton
 {
-border-radius: 8px;
-color: rgb(255,255,0);
-background-color: rgba(239, 0, 0);
 border: 2px solid ;
+border-radius: 8px;
+color: rgb(255,255,255);
+background-color: rgba(128,128,128);
+font-size:20px;
 }
 QPushButton:hover
 {
-color: rgb(239, 0, 0);
-background-color: rgb(255,255,0);
+color: rgb(255,255,255);
+background-color: rgb(169,169,169);
 }</string>
       </property>
       <property name="text">
@@ -381,24 +383,25 @@ background-color: rgb(255,255,0);
      <widget class="QPushButton" name="pushButton_4">
       <property name="geometry">
        <rect>
-        <x>550</x>
+        <x>532</x>
         <y>360</y>
-        <width>93</width>
-        <height>28</height>
+        <width>111</width>
+        <height>41</height>
        </rect>
       </property>
       <property name="styleSheet">
        <string notr="true">QPushButton
 {
-border-radius: 8px;
-color: rgb(255,255,0);
-background-color: rgba(239, 0, 0);
 border: 2px solid ;
+border-radius: 8px;
+color: rgb(255,255,255);
+background-color: rgba(128,128,128);
+font-size:20px;
 }
 QPushButton:hover
 {
-color: rgb(239, 0, 0);
-background-color: rgb(255,255,0);
+color: rgb(255,255,255);
+background-color: rgb(169,169,169);
 }</string>
       </property>
       <property name="text">
@@ -410,22 +413,23 @@ background-color: rgb(255,255,0);
        <rect>
         <x>650</x>
         <y>360</y>
-        <width>93</width>
-        <height>28</height>
+        <width>111</width>
+        <height>41</height>
        </rect>
       </property>
       <property name="styleSheet">
        <string notr="true">QPushButton
 {
-border-radius: 8px;
-color: rgb(255,255,0);
-background-color: rgba(239, 0, 0);
 border: 2px solid ;
+border-radius: 8px;
+color: rgb(255,255,255);
+background-color: rgba(128,128,128);
+font-size:20px;
 }
 QPushButton:hover
 {
-color: rgb(239, 0, 0);
-background-color: rgb(255,255,0);
+color: rgb(255,255,255);
+background-color: rgb(169,169,169);
 }</string>
       </property>
       <property name="text">
@@ -474,22 +478,23 @@ background-color: rgb(255,255,0);
       <rect>
        <x>550</x>
        <y>20</y>
-       <width>93</width>
-       <height>28</height>
+       <width>131</width>
+       <height>31</height>
       </rect>
      </property>
      <property name="styleSheet">
       <string notr="true">QPushButton
 {
-border-radius: 8px;
-color: rgb(255,255,0);
-background-color: rgba(239, 0, 0);
 border: 2px solid ;
+border-radius: 8px;
+color: rgb(255,255,255);
+background-color: rgba(128,128,128);
+font-size:20px;
 }
 QPushButton:hover
 {
-color: rgb(239, 0, 0);
-background-color: rgb(255,255,0);
+color: rgb(255,255,255);
+background-color: rgb(169,169,169);
 }</string>
      </property>
      <property name="text">
@@ -501,22 +506,23 @@ background-color: rgb(255,255,0);
       <rect>
        <x>550</x>
        <y>60</y>
-       <width>93</width>
-       <height>28</height>
+       <width>131</width>
+       <height>31</height>
       </rect>
      </property>
      <property name="styleSheet">
       <string notr="true">QPushButton
 {
-border-radius: 8px;
-color: rgb(255,255,0);
-background-color: rgba(239, 0, 0);
 border: 2px solid ;
+border-radius: 8px;
+color: rgb(255,255,255);
+background-color: rgba(128,128,128);
+font-size:20px;
 }
 QPushButton:hover
 {
-color: rgb(239, 0, 0);
-background-color: rgb(255,255,0);
+color: rgb(255,255,255);
+background-color: rgb(169,169,169);
 }</string>
      </property>
      <property name="text">
@@ -528,22 +534,23 @@ background-color: rgb(255,255,0);
       <rect>
        <x>550</x>
        <y>100</y>
-       <width>93</width>
-       <height>28</height>
+       <width>131</width>
+       <height>31</height>
       </rect>
      </property>
      <property name="styleSheet">
       <string notr="true">QPushButton
 {
-border-radius: 8px;
-color: rgb(255,255,0);
-background-color: rgba(239, 0, 0);
 border: 2px solid ;
+border-radius: 8px;
+color: rgb(255,255,255);
+background-color: rgba(128,128,128);
+font-size:20px;
 }
 QPushButton:hover
 {
-color: rgb(239, 0, 0);
-background-color: rgb(255,255,0);
+color: rgb(255,255,255);
+background-color: rgb(169,169,169);
 }</string>
      </property>
      <property name="text">
@@ -614,7 +621,7 @@ background-color: rgb(255,255,0);
        <x>20</x>
        <y>70</y>
        <width>181</width>
-       <height>31</height>
+       <height>41</height>
       </rect>
      </property>
      <property name="styleSheet">
@@ -631,22 +638,23 @@ background-color: rgb(255,255,0);
       <rect>
        <x>240</x>
        <y>70</y>
-       <width>101</width>
-       <height>31</height>
+       <width>111</width>
+       <height>41</height>
       </rect>
      </property>
      <property name="styleSheet">
       <string notr="true">QPushButton
 {
-border-radius: 8px;
-color: rgb(255,255,0);
-background-color: rgba(239, 0, 0);
 border: 2px solid ;
+border-radius: 8px;
+color: rgb(255,255,255);
+background-color: rgba(128,128,128);
+font-size:20px;
 }
 QPushButton:hover
 {
-color: rgb(239, 0, 0);
-background-color: rgb(255,255,0);
+color: rgb(255,255,255);
+background-color: rgb(169,169,169);
 }</string>
      </property>
      <property name="text">
@@ -659,21 +667,22 @@ background-color: rgb(255,255,0);
        <x>800</x>
        <y>260</y>
        <width>111</width>
-       <height>28</height>
+       <height>31</height>
       </rect>
      </property>
      <property name="styleSheet">
       <string notr="true">QPushButton
 {
-border-radius: 8px;
-color: rgb(255,255,0);
-background-color: rgba(239, 0, 0);
 border: 2px solid ;
+border-radius: 8px;
+color: rgb(255,255,255);
+font-size:20px;
+background-color: rgba(128,128,128);
 }
 QPushButton:hover
 {
-color: rgb(239, 0, 0);
-background-color: rgb(255,255,0);
+color: rgb(255,255,255);
+background-color: rgb(169,169,169);
 }</string>
      </property>
      <property name="text">
@@ -692,15 +701,16 @@ background-color: rgb(255,255,0);
      <property name="styleSheet">
       <string notr="true">QPushButton
 {
-border-radius: 8px;
-color: rgb(255,255,0);
-background-color: rgba(239, 0, 0);
 border: 2px solid ;
+border-radius: 8px;
+color: rgb(255,255,255);
+background-color: rgba(128,128,128);
+font-size:20px;
 }
 QPushButton:hover
 {
-color: rgb(239, 0, 0);
-background-color: rgb(255,255,0);
+color: rgb(255,255,255);
+background-color: rgb(169,169,169);
 }</string>
      </property>
      <property name="text">
@@ -710,9 +720,9 @@ background-color: rgb(255,255,0);
     <widget class="QLabel" name="label_6">
      <property name="geometry">
       <rect>
-       <x>750</x>
+       <x>740</x>
        <y>210</y>
-       <width>221</width>
+       <width>231</width>
        <height>31</height>
       </rect>
      </property>
@@ -721,7 +731,7 @@ background-color: rgb(255,255,0);
 color: #000000;
 background:#FFFF00;
 border: none;
-font-size:12px;
+font-size:13px;
 font-family:Arial, Helvetica, sans-serif;
 border: 2px solid ;
 border-radius: 8px;
@@ -739,9 +749,9 @@ border: none;
     <widget class="QLabel" name="label_7">
      <property name="geometry">
       <rect>
-       <x>760</x>
+       <x>750</x>
        <y>360</y>
-       <width>191</width>
+       <width>221</width>
        <height>31</height>
       </rect>
      </property>
@@ -750,7 +760,7 @@ border: none;
 color: #000000;
 background:#FFFF00;
 border: none;
-font-size:12px;
+font-size:15px;
 font-family:Arial, Helvetica, sans-serif;
 border: 2px solid ;
 border-radius: 8px;
