--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -40,13 +40,14 @@
 {
 border: 2px solid ;
 border-radius: 20px;
-color: rgb(255,255,0);
-background-color: rgba(239, 0, 0);
+color: rgb(255,255,255);
+background-color: rgba(128,128,128);
+font-size:20px;
 }
 QPushButton:hover
 {
-color: rgb(239, 0, 0);
-background-color: rgb(255,255,0);
+color: rgb(255,255,255);
+background-color: rgb(169,169,169);
 }</string>
      </property>
      <property name="text">
@@ -67,17 +68,18 @@ background-color: rgb(255,255,0);
 {
 border: 2px solid ;
 border-radius: 20px;
-color: rgb(255,255,0);
-background-color: rgba(239, 0, 0);
+color: rgb(255,255,255);
+background-color: rgba(128,128,128);
+font-size:20px;
 }
 QPushButton:hover
 {
-color: rgb(239, 0, 0);
-background-color: rgb(255,255,0);
+color: rgb(255,255,255);
+background-color: rgb(169,169,169);
 }</string>
      </property>
      <property name="text">
-      <string>gestion de volontaire</string>
+      <string>Gestion de volontaire</string>
      </property>
     </widget>
     <widget class="QPushButton" name="pushButton_3">
@@ -94,13 +96,14 @@ background-color: rgb(255,255,0);
 {
 border: 2px solid ;
 border-radius: 20px;
-color: rgb(255,255,0);
-background-color: rgba(239, 0, 0);
+color: rgb(255,255,255);
+background-color: rgba(128,128,128);
+font-size:20px;
 }
 QPushButton:hover
 {
-color: rgb(239, 0, 0);
-background-color: rgb(255,255,0);
+color: rgb(255,255,255);
+background-color: rgb(169,169,169);
 }</string>
      </property>
      <property name="text">
@@ -121,13 +124,14 @@ background-color: rgb(255,255,0);
 {
 border: 2px solid ;
 border-radius: 20px;
-color: rgb(255,255,0);
-background-color: rgba(239, 0, 0);
+color: rgb(255,255,255);
+background-color: rgba(128,128,128);
+font-size:20px;
 }
 QPushButton:hover
 {
-color: rgb(239, 0, 0);
-background-color: rgb(255,255,0);
+color: rgb(255,255,255);
+background-color: rgb(169,169,169);
 }</string>
      </property>
      <property name="text">
@@ -148,13 +152,14 @@ background-color: rgb(255,255,0);
 {
 border: 2px solid ;
 border-radius: 20px;
-color: rgb(255,255,0);
-background-color: rgba(239, 0, 0);
+color: rgb(255,255,255);
+background-color: rgba(128,128,128);
+font-size:20px;
 }
 QPushButton:hover
 {
-color: rgb(239, 0, 0);
-background-color: rgb(255,255,0);
+color: rgb(255,255,255);
+background-color: rgb(169,169,169);
 }</string>
      </property>
      <property name="text">
@@ -193,6 +198,63 @@ background-color: rgb(255,255,0);
       <pixmap>D:/projet c++/o.g/olympic-rings-icon-20.jpg</pixmap>
      </property>
     </widget>
+    <widget class="QPushButton" name="pushButton_6">
+     <property name="geometry">
+      <rect>
+       <x>20</x>
+       <y>450</y>
+       <width>181</width>
+       <height>41</height>
+      </rect>
+     </property>
+     <property name="styleSheet">
+      <string notr="true">QPushButton
+{
+border: 2px solid ;
+border-radius: 20px;
+color: rgb(255,255,255);
+background-color: rgba(128,128,128);
+font-size:20px;
+}
+QPushButton:hover
+{
+color: rgb(255,255,255);
+background-color: rgb(169,169,169);
+}</string>
+     </property>
+     <property name="text">
+      <string>LED</string>
+     </property>
+    </widget>
+    <widget class="QLabel" name="label_3">
+     <property name="geometry">
+      <rect>
+       <x>300</x>
+       <y>450</y>
+       <width>211</width>
+       <height>31</height>
+      </rect>
+     </property>
+     <property name="styleSheet">
+      <string notr="true">QLabel {
+color: #000000;
+background:#FFFF00;
+border: none;
+font-size:20px;
+font-family:Arial, Helvetica, sans-serif;
+border: 2px solid ;
+border-radius: 8px;
+}
+QPushButton:hover {
+color:#fff;
+background-color: rgb(0, 0, 127);
+border: none;
+}</string>
+     </property>
+     <property name="text">
+      <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p align=&quot;center&quot;&gt;distance&lt;/p&gt;&lt;p align=&quot;center&quot;&gt;&lt;br/&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
+     </property>
+    </widget>
     <zorder>label</zorder>
     <zorder>pushButton</zorder>
     <zorder>pushButton_2</zorder>
@@ -200,6 +262,8 @@ background-color: rgb(255,255,0);
     <zorder>pushButton_4</zorder>
     <zorder>pushButton_5</zorder>
     <zorder>label_2</zorder>
+    <zorder>pushButton_6</zorder>
+    <zorder>label_3</zorder>
    </widget>
   </widget>
   <widget class="QMenuBar" name="menubar">
